--- a/templates/index.html
+++ b/templates/index.html
@@ -10,17 +10,17 @@
         <input type="file" name="file" id="imageUpload" accept=".png, .jpg, .jpeg">
     </form>
 
-    <div class="image-section" style="display:none;">
-        <div class="img-preview">
+    <div class="image-section" style="display:none;margin: 0 auto;">
+        <div class="img-preview" style="margin: 0 auto;">
             <div id="imagePreview">
             </div>
         </div>
         <div>
-            <button type="button" class="btn btn-primary btn-lg " id="btn-predict">Analyze!</button>
+            <button type="button" class="btn btn-primary btn-lg" id="btn-predict">Analyze!</button>
         </div>
     </div>
 
-    <div class="loader" style="display:none;"></div>
+    <div class="loader" style="display:none; margin: 2em auto;"></div>
 
     <h3 id="result">
         <span> </span>
